--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
 .start-btn,
 .info-box,
 .quiz-box,
-.result-box {
+.result-box,
+.scoreboard-box {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -55,7 +56,8 @@ body {
 
 .info-box.clicked,
 .quiz-box.clicked,
-.result-box.clicked {
+.result-box.clicked,
+.scoreboard-box.clicked {
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -284,6 +286,9 @@ body {
 
 .quiz-box footer .check-result {}
 
+
+/* result box */
+
 .result-box {
     background-color: white;
     width: 450px;
@@ -330,4 +335,33 @@ body {
     margin-bottom: 20px;
     font-weight: 600;
     font-size: 20px;
+}
+
+
+/* leader board */
+
+.scoreboard-box {
+    background-color: white;
+    width: 450px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+}
+
+.scoreboard-box .scoreboard-title {
+    height: 60px;
+    width: 100%;
+    border-bottom: 1px solid gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 0 30px;
 }
